Fix help button wrap around and help box tab position on mobile.

--- a/src/app/input-form/help/help.component.scss
+++ b/src/app/input-form/help/help.component.scss
@@ -4,7 +4,7 @@ div.help-page
 {
   max-width: 40rem;;
   background-color: mat-color($primary, 400);
-  color: mat-color($primary, 50);
+  color: mat-color($primary, 100);
   border-radius: 10px;
   font-size: small;
   font-weight: 100;
